Changelog
=========


2.5 (unreleased)
----------------

- Remove deprecated methods: css_class_from_obj/css_class_from_brain
  [eschmutz]

- @@resolve_oguid: throw Unauthorized, not NotFound when the user has insufficient privileges.
  [jone]

- #1154 Umstellung OpenGever in GEVER
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1154
  Modified siteactions and Clientid viewlet
  [eschmutz]


2.4 (2012-03-28)
----------------

- Change french translation for help_privacy_layer
  [ttschanz]


2.3 (2012-02-28)
----------------

- Fixed french translations (end-of-line within string)
  [lgraf]

- Remove the standard 'extedit' action (CMFPlone) from document_actions on site setup
  [lgraf]


2.2 (2012-02-27)
----------------

- Reporter: added format functionality (set landsacpe format as default).
  [phgross]

- Extend get_css_class so that it supports global index objects.
  Issue #1412 Optimierung Mandant des Auftraggebers
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1412
  [jone]

- Fix get_css_class helper for tasks with predecessor (remote-task icon).
  Issue #1412 Optimierung Mandant des Auftraggebers
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1412
  [jone]

- Made adjustments on the XLSReport: title colum style, sheet and footer title.
  Issue #1286 Aufgabenexport um Dossiertitel erweitern.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1286
  [phgross]

- get_css_class helper: Immediatly set _v__is_relation to False after reading it.
  Avoids displaying wrong icon if same obj instance is used in a different request.
  [lgraf]

- Merge helpers `css_class_from_brain` and `css_class_from_obj`, add subtask / remote task icons.
  Issue #1343 "Aufgabe Delegieren" Wizard
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1343
  [jone]

- Added French translations.
  [ttschanz]
